--- a/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
@@ -21,9 +21,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                        @*<li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            </li>*@
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li><a  class="nav-link text-dark" href="~/logout">Logout</a></li>
+                        }
+                        else
+                        {
+                            <li><a  class="nav-link text-dark" href="~/login">Login</a></li>
+                        }
                     </ul>
                 </div>
             </div>
