--- a/StanLeeSlackBot.Web/Pages/Index.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>
-        <a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=248918156054.874765422194"><img alt="" Sign in with Slack"" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
+        @*<a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=248918156054.874765422194"><img alt="" Sign in with Slack"" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>*@
         <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=248918156054.874765422194"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
     </p>
 </div>
