--- a/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
@@ -13,28 +13,31 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">StanLeeSlackBot</a>
-                @*<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                                    </li>
-                        @if (User.Identity.IsAuthenticated)
+                            <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Support">Support</a>
+                        </li>
+                        @*@if (User.Identity.IsAuthenticated)
                             {
-                                <li><a  class="nav-link text-dark" href="~/logout">Logout</a></li>
+                                <li><a class="nav-link text-dark" href="~/logout">Logout</a></li>
                             }
                             else
                             {
-                                <li><a  class="nav-link text-dark" href="~/login">Login</a></li>
-                            }
+                                <li><a class="nav-link text-dark" href="~/login">Login</a></li>
+                            }*@
                     </ul>
-                </div>*@
+                </div>
             </div>
         </nav>
     </header>
