Added all the favicons!

--- a/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StanLeeSlackBot - @ViewData["Title"]</title>
+    <partial name="_Favicons"/>
     <meta name="slack-app-id" content="ARQNHCE5Q">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
