Changing url to stanleebot.com

--- a/StanLeeSlackBot.Web/Pages/Index.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Index.cshtml
@@ -26,10 +26,11 @@
     <h1 class="display-4">Welcome</h1>
     <div class="text-left">
         <p>
-            The StanLeeSlackBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands:
+            The StanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands in Slack:
             <ul>
                 <li>/marvel</li>
                 <li>/dc</li>
+                <li>/stanlee</li>
             </ul>
             For example, if you want information about Ironman you'd type /marvel Ironman. However, you can look up so much more!
         </p>
