--- a/StanLeeSlackBot.Web/Pages/Privacy.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Privacy.cshtml
@@ -7,17 +7,17 @@
 
 <p>Effective date: December 31, 2019</p>
 
-<p>Stan Lee Slack Bot ("us", "we", or "our") operates the https://stanleeslackbot.com website (hereinafter referred to as the "Service").</p>
+<p>StanLeeBot ("us", "we", or "our") operates the https://stanleebot.com website (hereinafter referred to as the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
-<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://stanleeslackbot.com</p>
+<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://stanleebot.com</p>
 
 <h2>Definitions</h2>
 <ul>
     <li>
         <p><strong>Service</strong></p>
-        <p>Service is the https://stanleeslackbot.com website operated by Stan Lee Slack Bot</p>
+        <p>Service is the https://stanleebot.com website operated by StanLeeBot</p>
     </li>
     <li>
         <p><strong>Personal Data</strong></p>
@@ -62,7 +62,7 @@
 
 <h2>Use of Data</h2>
 
-<p>Stan Lee Slack Bot uses the collected data for various purposes:</p>
+<p>StanLeeBot uses the collected data for various purposes:</p>
 <ul>
     <li>To provide and maintain the Service</li>
     <li>To notify you about changes to our Service</li>
@@ -77,15 +77,15 @@
 <p>Your information, including Personal Data, may be transferred to - and maintained on - computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
 <p>If you are located outside United States and choose to provide information to us, please note that we transfer the data, including Personal Data, to United States and process it there.</p>
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
-<p>Stan Lee Slack Bot will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+<p>StanLeeBot will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
 
 <h2>Disclosure Of Data</h2>
 
 <h3>Legal Requirements</h3>
-<p>Stan Lee Slack Bot may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+<p>StanLeeBot may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
 <ul>
     <li>To comply with a legal obligation</li>
-    <li>To protect and defend the rights or property of Stan Lee Slack Bot</li>
+    <li>To protect and defend the rights or property of StanLeeBot</li>
     <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
     <li>To protect the personal safety of users of the Service or the public</li>
     <li>To protect against legal liability</li>
