--- a/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
+++ b/StanLeeSlackBot.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StanLeeSlackBot - @ViewData["Title"]</title>
+    <title>StanLeeBot - @ViewData["Title"]</title>
     <partial name="_Favicons"/>
     <meta name="slack-app-id" content="ARQNHCE5Q">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">StanLeeSlackBot</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">StanLeeBot</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
         </nav>
     </header>
     <div class="container-fluid text-center mb-4" style="background-color: #FF3843;">
-        <img src="~/images/StanLee-250x250.png" class="img-fluid" style="padding:25px 0" alt="Stan Lee Slack Bot" title="Stan Lee Slack Bot" />
+        <img src="~/images/StanLee-250x250.png" class="img-fluid" style="padding:25px 0" alt="StanLeeBot" title="StanLeeBot" />
     </div>
     <div class="container">
         <main role="main" class="pb-3">
@@ -53,7 +53,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - StanLeeSlackBot
+            &copy; @DateTime.Now.Year - StanLeeBot
         </div>
     </footer>
 
