--- a/StanLeeBot.Web/Pages/Index.cshtml
+++ b/StanLeeBot.Web/Pages/Index.cshtml
@@ -20,22 +20,50 @@
     </div>
 }
 
-
-
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <div class="text-left">
-        <p>
-            The StanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands in Slack:
-            <ul>
-                <li>/marvel</li>
-                <li>/dc</li>
-                <li>/stanlee</li>
-            </ul>
-            For example, if you want information about Ironman you'd type /marvel Ironman. However, you can look up so much more!
-        </p>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#slack" aria-controls="slack" aria-expanded="true">Slack</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#telegram">Telegram</a>
+            </li>
+        </ul>
+
+        <div class="container-fluid">
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="slack">
+                    <p>
+                        The @@StanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands in Slack:
+                        <ul>
+                            <li>/marvel</li>
+                            <li>/dc</li>
+                            <li>/stanlee</li>
+                        </ul>
+                        For example, if you want information about Ironman you'd type /marvel Ironman. However, you can look up so much more!
+                    </p>
+                    <p class="text-center">
+                        <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=248918156054.874765422194"><img alt="Add to Slack" width="200" src="https://platform.slack-edge.com/img/add_to_slack@2x.png" /></a>
+                    </p>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="telegram">
+                    <p>
+                        @@TheStanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands in Slack:
+                        <ul>
+                            <li>/marvel</li>
+                            <li>/dc</li>
+                        </ul>
+                        For example, if you want information about Spiderman you'd type /marvel Spiderman. However, you can look up so much more!
+                    </p>
+                    <p class="text-center">
+                        <a href="https://t.me/TheStanLeeBot" target="_blank" class="btn btn-telegram"><i class="fab fa-telegram fa-2x va-middle"></i> Go to Telegram</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        
     </div>
-    <p>
-        <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=248918156054.874765422194"><img alt="Add to Slack" width="200" src="https://platform.slack-edge.com/img/add_to_slack@2x.png" /></a>
-    </p>
+    
 </div>
