--- a/StanLeeBot.Web/wwwroot/css/site.css
+++ b/StanLeeBot.Web/wwwroot/css/site.css
@@ -69,3 +69,26 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.bg-stanlee {
+    background-color: #FF3843;
+}
+.pad-25-0 {
+    padding: 25px 0;
+}
+.text-lightblue {
+    color: #0992D5;
+}
+.line-height-30 {
+    line-height: 30px !important;
+}
+.va-middle {
+    vertical-align: middle;
+}
+.btn-telegram {
+    background-color: #32AFED;
+    border-color: #32AFED;
+    color: #fff;
+}
+.btn-telegram:hover {
+    color: #fff;
+}
