--- a/StanLeeBot.Web/Pages/Index.cshtml
+++ b/StanLeeBot.Web/Pages/Index.cshtml
@@ -53,8 +53,7 @@
                         <li>/dc Justice League Movie</li>
                     </ul>
                     <div class="pad-top-10">
-                        For help or support, you can go about it two ways. Either send a direct message to <b>@@StanLeeBot</b> with "help" or "support"
-                        or use the slash command <b>/stanlee</b> with "help" or "support".
+                        For help or support, use the slash command <b>/stanlee</b> with "help" or "support".
                     </div>
                     <div class="pad-top-10">
                         The <b>@@StanLeeBot</b> can also shorten long urls into a https://mrvl.co/ url. You can use the command <b>/mrvlco</b>. 
@@ -65,6 +64,9 @@
                         you can log into the URL Shortening Service provided by <a href="https://babou.io" target="_blank">https://babou.io</a>. 
                         Don't worry, we won't email you or sell your email address to any third party. Your email address is to <b><i>strictly</i></b> 
                         create or update an account with babou.io (which is also developed by the same team here).
+                    </div>
+                    <div class="text-center pad-top-10">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".slack-examples">View some examples</button>
                     </div>
                     <p class="text-center pad-top-10">
                         <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=@Configuration["Slack:ClientId"]"><img alt="Add to Slack" width="200" src="https://platform.slack-edge.com/img/add_to_slack@2x.png" /></a>
@@ -88,4 +90,76 @@
 
     </div>
 
+</div>
+
+<div class="modal fade slack-examples" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Examples</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/Marvel-Ironman.png" alt="/marvel Ironman" title="/marvel Ironman">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/marvel Ironman</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/Marvel-Infinity-Stones.png" alt="/marvel Infinity Stones" title="/marvel Infinity Stones">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/marvel Infinity Stones</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/DC-Batman.png" alt="/dc Batman" title="/dc Batman">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/dc Batman</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/DC-Justice-League-Movie.png" alt="/dc Justice League Movie" title="/dc Justice League Movie">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/dc Justice League Movie</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/MrvlCo-ShortenUrl.png" alt="/mrvlco LongUrl YourEmailAddress" title="/mrvlco LongUrl YourEmailAddress">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/mrvlco LongUrl YourEmailAddress</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/StanLee-Help.png" alt="/stanlee help" title="/stanlee help">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/stanlee help</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="~/images/SlackExamples/StanLee-Support.png" alt="/stanlee support" title="/stanlee support">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>/stanlee support</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
