Updated Telegram description

--- a/StanLeeBot.Web/Pages/Index.cshtml
+++ b/StanLeeBot.Web/Pages/Index.cshtml
@@ -73,14 +73,19 @@
                     </p>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="telegram">
-                    <p>
-                        @@TheStanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. You can use the following commands in Slack:
-                        <ul>
-                            <li>/marvel</li>
-                            <li>/dc</li>
+                        <b>@@TheStanLeeBot</b> scours the Marvel and DC Comics website to find information that you're looking for.
+                        <div class="pad-top-10">
+                            To learn more about anything Marvel or DC Comics related, use the slash commands <b>/marvel</b> and <b>/dc</b>.
+                        </div>
+                        <div class="pad-top-10">
+                            Here are some examples:
+                        </div>
+                        <ul class="no-margin-bottom">
+                            <li>/marvel Ironman</li>
+                            <li>/marvel Infinity Stones</li>
+                            <li>/dc Batman</li>
+                            <li>/dc Justice League Movie</li>
                         </ul>
-                        For example, if you want information about Spiderman you'd type /marvel Spiderman. However, you can look up so much more!
-                    </p>
                     <p class="text-center">
                         <a href="https://t.me/TheStanLeeBot" target="_blank" class="btn btn-telegram"><i class="fab fa-telegram fa-2x va-middle"></i> Go to Telegram</a>
                     </p>
