--- a/StanLeeBot.Web/wwwroot/css/site.css
+++ b/StanLeeBot.Web/wwwroot/css/site.css
@@ -137,3 +137,10 @@ body {
 .carousel-caption {
     color: #000000;
 }
+.text-brand-facebook {
+    color: #4267B2;
+}
+
+.text-brand-twitter {
+    color: #1A91DA;
+}
