Added Google Analytics, updated Privacy Policy. Added comments to header elements

--- a/StanLeeBot.Web/Pages/Shared/_SocialMetatags.cshtml
+++ b/StanLeeBot.Web/Pages/Shared/_SocialMetatags.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    const string description = "The StanLeeBot scours the Marvel and DC Comics website to find information that you're looking for. Integrations with Slack and Telegram.";
+    const string description = "StanLeeBot scours Marvel and DC Comics to find information that you're looking for. Integrates with Slack, Telegram, & more.";
 }
 
+<!-- Start Social Metatags -->
 <!-- Search Engine -->
 <meta name="description" content="@description" />
 <meta name="image" content="https://stanleebot.com/images/StanLee-1024x1024.png">
@@ -40,3 +41,4 @@
 <meta property="fb:app_id" content="621575301927860" />
 <!-- Slack -->
 <meta name="slack-app-id" content="ARQNHCE5Q">
+<!-- End Social Metatags -->
