--- a/StanLeeBot.Web/Pages/Privacy.cshtml
+++ b/StanLeeBot.Web/Pages/Privacy.cshtml
@@ -5,7 +5,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Effective date: December 31, 2019</p>
+<p>Effective date: January 08, 2020</p>
 
 <p>StanLeeBot ("us", "we", or "our") operates the https://stanleebot.com website (hereinafter referred to as the "Service").</p>
 
@@ -99,6 +99,17 @@
 <h2>Service Providers</h2>
 <p>We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</p>
 <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
+
+<h3>Analytics</h3>
+<p>We may use third-party Service Providers to monitor and analyze the use of our Service.</p>
+<ul>
+    <li>
+        <p><strong>Google Analytics</strong></p>
+        <p>Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.</p>
+        <p>You can opt-out of having made your activity on the Service available to Google Analytics by installing the Google Analytics opt-out browser add-on. The add-on prevents the Google Analytics JavaScript (ga.js, analytics.js and dc.js) from sharing information with Google Analytics about visits activity.</p>
+        <p>For more information on the privacy practices of Google, please visit the Google Privacy & Terms web page: <a href="https://policies.google.com/privacy?hl=en">https://policies.google.com/privacy?hl=en</a></p>
+    </li>
+</ul>
 
 <h2>Links to Other Sites</h2>
 <p>Our Service may contain links to other sites that are not operated by us. If you click a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
