--- a/StanLeeBot.Web/Pages/Shared/_Favicons.cshtml
+++ b/StanLeeBot.Web/Pages/Shared/_Favicons.cshtml
@@ -1,4 +1,5 @@
-﻿<link rel="apple-touch-icon" sizes="180x180" href="~/apple-touch-icon.png">
+﻿<!-- Start Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="~/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="~/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="~/favicon-16x16.png">
 <link rel="manifest" href="~/manifest.json">
@@ -6,3 +7,4 @@
 <meta name="msapplication-TileColor" content="#ff3843">
 <meta name="msapplication-TileImage" content="~/mstile-144x144.png">
 <meta name="theme-color" content="#ff3843">
+<!-- End Favicons -->
