Updated social sharing images and updated footer to include Excelsior Dev

--- a/StanLeeBot.Web/Pages/Shared/_Layout.cshtml
+++ b/StanLeeBot.Web/Pages/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="container">
-            Developed by <a class="text-lightblue" href="http://s.babou.io/aj?src=https://stanleebot.com" target="_blank">AJ Tatum</a>
+            Developed by <a class="text-lightblue" href="https://ajtatum.com" target="_blank">AJ Tatum</a> with <a class="text-lightblue" href="https://excelsiordev.co">Excelsior Dev</a>.
         </div>
     </footer>
 
