Updated readme with Telegram instructions. Migrating DialogFlow into master branch

--- a/StanLeeBot.Web/Pages/Index.cshtml
+++ b/StanLeeBot.Web/Pages/Index.cshtml
@@ -73,7 +73,7 @@
                     </p>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="telegram">
-                        <b>@@TheStanLeeBot</b> scours the Marvel and DC Comics website to find information that you're looking for.
+                        <b>@@TheStanLeeBot</b> scours the Marvel and DC Comics website to find information that you're looking for. Start any conversation with @@TheStanLeeBot by saying "hi".
                         <div class="pad-top-10">
                             To learn more about anything Marvel or DC Comics related, use the slash commands <b>/marvel</b> and <b>/dc</b>.
                         </div>
